Do not shuffle when splitting the train and validation set, fine tuned artist_name, PB 0.66973

--- a/notebooks/Untitled.ipynb
+++ b/notebooks/Untitled.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -53,6 +53,7 @@
       "sample_submission.csv\n",
       "song_extra_info.csv\n",
       "songs.csv\n",
+      "submission_lgbm_avg.csv.gz\n",
       "test.csv\n",
       "train.csv\n",
       "\n"
@@ -73,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,10 +217,11 @@
     "test['is_featured'] = test['artist_name'].apply(is_featured).astype(np.int8)\n",
     "\n",
     "def artist_count(x):\n",
-    "    if x == 'no_artist':\n",
+    "    if x == '佚名':\n",
     "        return 0\n",
-    "    else:\n",
-    "        return x.count('and') + x.count(',') + x.count('feat') + x.count('&')\n",
+    "    if x == '群星':\n",
+    "        return -1\n",
+    "    return sum(map(x.count, ['|', ',', 'feat', '&', 'and'])) + 1\n",
     "\n",
     "train['artist_count'] = train['artist_name'].apply(artist_count).astype(np.int8)\n",
     "test['artist_count'] = test['artist_name'].apply(artist_count).astype(np.int8)\n",
@@ -286,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -313,8 +315,8 @@
     "X_test = test.drop(['id'], axis=1)\n",
     "ids = test['id'].values\n",
     "\n",
-    "# TODO: Try another way of splitting, use the last 21m rows of train as validation\n",
-    "X_tr, X_val, y_tr, y_val = train_test_split(X_train, y_train)\n",
+    "# Use the test size as the validation set size, make use of the fact that the training set is chronically ordered\n",
+    "X_tr, X_val, y_tr, y_val = train_test_split(X_train, y_train,test_size=X_test.shape[0],shuffle=False)\n",
     "\n",
     "d_train_final = lgb.Dataset(X_tr, y_tr)\n",
     "watchlist_final = lgb.Dataset(X_val, y_val)"
@@ -322,64 +324,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X_test.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/xiaoxli/anaconda3/envs/wsdm-music-recommendation-py27/lib/python2.7/site-packages/lightgbm/engine.py:99: UserWarning: Found `num_rounds` in params. Will use it instead of argument\n",
+      "  warnings.warn(\"Found `{}` in params. Will use it instead of argument\".format(alias))\n",
+      "/Users/xiaoxli/anaconda3/envs/wsdm-music-recommendation-py27/lib/python2.7/site-packages/lightgbm/basic.py:642: UserWarning: max_bin keyword has been found in `params` and will be ignored. Please use max_bin argument of the Dataset constructor to pass this parameter.\n",
+      "  'Please use {0} argument of the Dataset constructor to pass this parameter.'.format(key))\n",
+      "/Users/xiaoxli/anaconda3/envs/wsdm-music-recommendation-py27/lib/python2.7/site-packages/lightgbm/basic.py:671: UserWarning: categorical_feature in param dict is overrided.\n",
+      "  warnings.warn('categorical_feature in param dict is overrided.')\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[5]\tvalid_0's auc: 0.729157\n",
-      "[10]\tvalid_0's auc: 0.740248\n",
-      "[15]\tvalid_0's auc: 0.745887\n",
-      "[20]\tvalid_0's auc: 0.74975\n",
-      "[25]\tvalid_0's auc: 0.753015\n",
-      "[30]\tvalid_0's auc: 0.756668\n",
-      "[35]\tvalid_0's auc: 0.759219\n",
-      "[40]\tvalid_0's auc: 0.761447\n",
-      "[45]\tvalid_0's auc: 0.763453\n",
-      "[50]\tvalid_0's auc: 0.765036\n",
-      "[55]\tvalid_0's auc: 0.766677\n",
-      "[60]\tvalid_0's auc: 0.768178\n",
-      "[65]\tvalid_0's auc: 0.769649\n",
-      "[70]\tvalid_0's auc: 0.771013\n",
-      "[75]\tvalid_0's auc: 0.772289\n",
-      "[80]\tvalid_0's auc: 0.773355\n",
-      "[85]\tvalid_0's auc: 0.774427\n",
-      "[90]\tvalid_0's auc: 0.775337\n",
-      "[95]\tvalid_0's auc: 0.776697\n",
-      "[100]\tvalid_0's auc: 0.777444\n",
-      "[105]\tvalid_0's auc: 0.77827\n",
-      "[110]\tvalid_0's auc: 0.778962\n",
-      "[115]\tvalid_0's auc: 0.779692\n",
-      "[120]\tvalid_0's auc: 0.780336\n",
-      "[125]\tvalid_0's auc: 0.781049\n",
-      "[130]\tvalid_0's auc: 0.781699\n",
-      "[135]\tvalid_0's auc: 0.782376\n",
-      "[140]\tvalid_0's auc: 0.782791\n",
-      "[145]\tvalid_0's auc: 0.783198\n",
-      "[150]\tvalid_0's auc: 0.78377\n",
-      "[155]\tvalid_0's auc: 0.784176\n",
-      "[160]\tvalid_0's auc: 0.784831\n",
-      "[165]\tvalid_0's auc: 0.785903\n",
-      "[170]\tvalid_0's auc: 0.786406\n",
-      "[175]\tvalid_0's auc: 0.786809\n",
-      "[180]\tvalid_0's auc: 0.787447\n",
-      "[185]\tvalid_0's auc: 0.787785\n",
-      "[190]\tvalid_0's auc: 0.78859\n",
-      "[195]\tvalid_0's auc: 0.788911\n",
-      "[200]\tvalid_0's auc: 0.789416\n",
-      "CPU times: user 7min 52s, sys: 20.2 s, total: 8min 13s\n",
-      "Wall time: 2min 2s\n"
+      "[5]\tvalid_0's auc: 0.653114\n",
+      "[10]\tvalid_0's auc: 0.658683\n",
+      "[15]\tvalid_0's auc: 0.661981\n",
+      "[20]\tvalid_0's auc: 0.664433\n",
+      "[25]\tvalid_0's auc: 0.665969\n",
+      "[30]\tvalid_0's auc: 0.667273\n",
+      "[35]\tvalid_0's auc: 0.669206\n",
+      "[40]\tvalid_0's auc: 0.670184\n",
+      "[45]\tvalid_0's auc: 0.670915\n",
+      "[50]\tvalid_0's auc: 0.671749\n",
+      "[55]\tvalid_0's auc: 0.672233\n",
+      "[60]\tvalid_0's auc: 0.672655\n",
+      "[65]\tvalid_0's auc: 0.673599\n",
+      "[70]\tvalid_0's auc: 0.674236\n",
+      "[75]\tvalid_0's auc: 0.674638\n",
+      "[80]\tvalid_0's auc: 0.675098\n",
+      "[85]\tvalid_0's auc: 0.675493\n",
+      "[90]\tvalid_0's auc: 0.675735\n",
+      "[95]\tvalid_0's auc: 0.676085\n",
+      "[100]\tvalid_0's auc: 0.676491\n",
+      "[105]\tvalid_0's auc: 0.676676\n",
+      "[110]\tvalid_0's auc: 0.676863\n",
+      "[115]\tvalid_0's auc: 0.676983\n",
+      "[120]\tvalid_0's auc: 0.677084\n",
+      "[125]\tvalid_0's auc: 0.677262\n",
+      "[130]\tvalid_0's auc: 0.677497\n",
+      "[135]\tvalid_0's auc: 0.67772\n",
+      "[140]\tvalid_0's auc: 0.677922\n",
+      "[145]\tvalid_0's auc: 0.678023\n",
+      "[150]\tvalid_0's auc: 0.678137\n",
+      "[155]\tvalid_0's auc: 0.678209\n",
+      "[160]\tvalid_0's auc: 0.678321\n",
+      "[165]\tvalid_0's auc: 0.678447\n",
+      "[170]\tvalid_0's auc: 0.678468\n",
+      "[175]\tvalid_0's auc: 0.678523\n",
+      "[180]\tvalid_0's auc: 0.678623\n",
+      "[185]\tvalid_0's auc: 0.678694\n",
+      "[190]\tvalid_0's auc: 0.678788\n",
+      "[195]\tvalid_0's auc: 0.678848\n",
+      "[200]\tvalid_0's auc: 0.678906\n",
+      "CPU times: user 7min 39s, sys: 17.9 s, total: 7min 57s\n",
+      "Wall time: 1min 55s\n"
      ]
     }
    ],
@@ -407,55 +412,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[5]\tvalid_0's auc: 0.729157\n",
-      "[10]\tvalid_0's auc: 0.738469\n",
-      "[15]\tvalid_0's auc: 0.745656\n",
-      "[20]\tvalid_0's auc: 0.750127\n",
-      "[25]\tvalid_0's auc: 0.754117\n",
-      "[30]\tvalid_0's auc: 0.756474\n",
-      "[35]\tvalid_0's auc: 0.757866\n",
-      "[40]\tvalid_0's auc: 0.760236\n",
-      "[45]\tvalid_0's auc: 0.762792\n",
-      "[50]\tvalid_0's auc: 0.763562\n",
-      "[55]\tvalid_0's auc: 0.766234\n",
-      "[60]\tvalid_0's auc: 0.767662\n",
-      "[65]\tvalid_0's auc: 0.769138\n",
-      "[70]\tvalid_0's auc: 0.769082\n",
-      "[75]\tvalid_0's auc: 0.769956\n",
-      "[80]\tvalid_0's auc: 0.770148\n",
-      "[85]\tvalid_0's auc: 0.769908\n",
-      "[90]\tvalid_0's auc: 0.770505\n",
-      "[95]\tvalid_0's auc: 0.771406\n",
-      "[100]\tvalid_0's auc: 0.772226\n",
-      "[105]\tvalid_0's auc: 0.772799\n",
-      "[110]\tvalid_0's auc: 0.772329\n",
-      "[115]\tvalid_0's auc: 0.773753\n",
-      "[120]\tvalid_0's auc: 0.774253\n",
-      "[125]\tvalid_0's auc: 0.774526\n",
-      "[130]\tvalid_0's auc: 0.775719\n",
-      "[135]\tvalid_0's auc: 0.776186\n",
-      "[140]\tvalid_0's auc: 0.776902\n",
-      "[145]\tvalid_0's auc: 0.776582\n",
-      "[150]\tvalid_0's auc: 0.777056\n",
-      "[155]\tvalid_0's auc: 0.777491\n",
-      "[160]\tvalid_0's auc: 0.77722\n",
-      "[165]\tvalid_0's auc: 0.778526\n",
-      "[170]\tvalid_0's auc: 0.779341\n",
-      "[175]\tvalid_0's auc: 0.780265\n",
-      "[180]\tvalid_0's auc: 0.780367\n",
-      "[185]\tvalid_0's auc: 0.78118\n",
-      "[190]\tvalid_0's auc: 0.781535\n",
-      "[195]\tvalid_0's auc: 0.781805\n",
-      "[200]\tvalid_0's auc: 0.782299\n",
-      "CPU times: user 41min 33s, sys: 20.7 s, total: 41min 53s\n",
-      "Wall time: 6min 48s\n"
+      "[5]\tvalid_0's auc: 0.653114\n",
+      "[10]\tvalid_0's auc: 0.657574\n",
+      "[15]\tvalid_0's auc: 0.66144\n",
+      "[20]\tvalid_0's auc: 0.664042\n",
+      "[25]\tvalid_0's auc: 0.665703\n",
+      "[30]\tvalid_0's auc: 0.666774\n",
+      "[35]\tvalid_0's auc: 0.667773\n",
+      "[40]\tvalid_0's auc: 0.669122\n",
+      "[45]\tvalid_0's auc: 0.669959\n",
+      "[50]\tvalid_0's auc: 0.670366\n",
+      "[55]\tvalid_0's auc: 0.671043\n",
+      "[60]\tvalid_0's auc: 0.671683\n",
+      "[65]\tvalid_0's auc: 0.672232\n",
+      "[70]\tvalid_0's auc: 0.67285\n",
+      "[75]\tvalid_0's auc: 0.672997\n",
+      "[80]\tvalid_0's auc: 0.673515\n",
+      "[85]\tvalid_0's auc: 0.673327\n",
+      "[90]\tvalid_0's auc: 0.673535\n",
+      "[95]\tvalid_0's auc: 0.673701\n",
+      "[100]\tvalid_0's auc: 0.673904\n",
+      "[105]\tvalid_0's auc: 0.67395\n",
+      "[110]\tvalid_0's auc: 0.673987\n",
+      "[115]\tvalid_0's auc: 0.675365\n",
+      "[120]\tvalid_0's auc: 0.675752\n",
+      "[125]\tvalid_0's auc: 0.675624\n",
+      "[130]\tvalid_0's auc: 0.675811\n",
+      "[135]\tvalid_0's auc: 0.676278\n",
+      "[140]\tvalid_0's auc: 0.676506\n",
+      "[145]\tvalid_0's auc: 0.676711\n",
+      "[150]\tvalid_0's auc: 0.676791\n",
+      "[155]\tvalid_0's auc: 0.676818\n",
+      "[160]\tvalid_0's auc: 0.676617\n",
+      "[165]\tvalid_0's auc: 0.677086\n",
+      "[170]\tvalid_0's auc: 0.677591\n",
+      "[175]\tvalid_0's auc: 0.677871\n",
+      "[180]\tvalid_0's auc: 0.677892\n",
+      "[185]\tvalid_0's auc: 0.678146\n",
+      "[190]\tvalid_0's auc: 0.678279\n",
+      "[195]\tvalid_0's auc: 0.678626\n",
+      "[200]\tvalid_0's auc: 0.678633\n",
+      "CPU times: user 38min 24s, sys: 22 s, total: 38min 46s\n",
+      "Wall time: 6min 35s\n"
      ]
     }
    ],
@@ -483,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -507,14 +512,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saving predictions Model model of gbdt\n"
+      "Saving predictions Model model of gbdt\n",
+      "Done!\n"
      ]
     }
    ],
