Tuned parameters for lgbm, prediction using the mean of dart and gbdt.  PB 0.68760

--- a/notebooks/Untitled.ipynb
+++ b/notebooks/Untitled.ipynb
@@ -7,7 +7,7 @@
    },
    "source": [
     "# Table of Contents\n",
-    " <p><div class=\"lev3 toc-item\"><a href=\"#Based-on-the-following-notebooks\" data-toc-modified-id=\"Based-on-the-following-notebooks-001\"><span class=\"toc-item-num\">0.0.1&nbsp;&nbsp;</span>Based on the following notebooks</a></div><div class=\"lev3 toc-item\"><a href=\"#Load-input-data\" data-toc-modified-id=\"Load-input-data-002\"><span class=\"toc-item-num\">0.0.2&nbsp;&nbsp;</span>Load input data</a></div><div class=\"lev3 toc-item\"><a href=\"#Merge-DFs\" data-toc-modified-id=\"Merge-DFs-003\"><span class=\"toc-item-num\">0.0.3&nbsp;&nbsp;</span>Merge DFs</a></div><div class=\"lev3 toc-item\"><a href=\"#Add-features\" data-toc-modified-id=\"Add-features-004\"><span class=\"toc-item-num\">0.0.4&nbsp;&nbsp;</span>Add features</a></div>"
+    " <p><div class=\"lev3 toc-item\"><a href=\"#Based-on-the-following-notebooks\" data-toc-modified-id=\"Based-on-the-following-notebooks-001\"><span class=\"toc-item-num\">0.0.1&nbsp;&nbsp;</span>Based on the following notebooks</a></div><div class=\"lev3 toc-item\"><a href=\"#Load-input-data\" data-toc-modified-id=\"Load-input-data-002\"><span class=\"toc-item-num\">0.0.2&nbsp;&nbsp;</span>Load input data</a></div><div class=\"lev3 toc-item\"><a href=\"#Merge-DFs\" data-toc-modified-id=\"Merge-DFs-003\"><span class=\"toc-item-num\">0.0.3&nbsp;&nbsp;</span>Merge DFs</a></div><div class=\"lev3 toc-item\"><a href=\"#Add-features\" data-toc-modified-id=\"Add-features-004\"><span class=\"toc-item-num\">0.0.4&nbsp;&nbsp;</span>Add features</a></div><div class=\"lev3 toc-item\"><a href=\"#Split-train-and-validation-set\" data-toc-modified-id=\"Split-train-and-validation-set-005\"><span class=\"toc-item-num\">0.0.5&nbsp;&nbsp;</span>Split train and validation set</a></div>"
    ]
   },
   {
@@ -287,6 +287,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Split train and validation set"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -315,11 +322,10 @@
     "X_test = test.drop(['id'], axis=1)\n",
     "ids = test['id'].values\n",
     "\n",
-    "# Use the test size as the validation set size, make use of the fact that the training set is chronically ordered\n",
-    "X_tr, X_val, y_tr, y_val = train_test_split(X_train, y_train,test_size=X_test.shape[0],shuffle=False)\n",
+    "X_tr, X_val, y_tr, y_val = train_test_split(X_train, y_train)\n",
     "\n",
-    "d_train_final = lgb.Dataset(X_tr, y_tr)\n",
-    "watchlist_final = lgb.Dataset(X_val, y_val)"
+    "lgb_train = lgb.Dataset(X_tr, y_tr)\n",
+    "lgb_val = lgb.Dataset(X_val, y_val)"
    ]
   },
   {
@@ -343,58 +349,77 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[5]\tvalid_0's auc: 0.653114\n",
-      "[10]\tvalid_0's auc: 0.658683\n",
-      "[15]\tvalid_0's auc: 0.661981\n",
-      "[20]\tvalid_0's auc: 0.664433\n",
-      "[25]\tvalid_0's auc: 0.665969\n",
-      "[30]\tvalid_0's auc: 0.667273\n",
-      "[35]\tvalid_0's auc: 0.669206\n",
-      "[40]\tvalid_0's auc: 0.670184\n",
-      "[45]\tvalid_0's auc: 0.670915\n",
-      "[50]\tvalid_0's auc: 0.671749\n",
-      "[55]\tvalid_0's auc: 0.672233\n",
-      "[60]\tvalid_0's auc: 0.672655\n",
-      "[65]\tvalid_0's auc: 0.673599\n",
-      "[70]\tvalid_0's auc: 0.674236\n",
-      "[75]\tvalid_0's auc: 0.674638\n",
-      "[80]\tvalid_0's auc: 0.675098\n",
-      "[85]\tvalid_0's auc: 0.675493\n",
-      "[90]\tvalid_0's auc: 0.675735\n",
-      "[95]\tvalid_0's auc: 0.676085\n",
-      "[100]\tvalid_0's auc: 0.676491\n",
-      "[105]\tvalid_0's auc: 0.676676\n",
-      "[110]\tvalid_0's auc: 0.676863\n",
-      "[115]\tvalid_0's auc: 0.676983\n",
-      "[120]\tvalid_0's auc: 0.677084\n",
-      "[125]\tvalid_0's auc: 0.677262\n",
-      "[130]\tvalid_0's auc: 0.677497\n",
-      "[135]\tvalid_0's auc: 0.67772\n",
-      "[140]\tvalid_0's auc: 0.677922\n",
-      "[145]\tvalid_0's auc: 0.678023\n",
-      "[150]\tvalid_0's auc: 0.678137\n",
-      "[155]\tvalid_0's auc: 0.678209\n",
-      "[160]\tvalid_0's auc: 0.678321\n",
-      "[165]\tvalid_0's auc: 0.678447\n",
-      "[170]\tvalid_0's auc: 0.678468\n",
-      "[175]\tvalid_0's auc: 0.678523\n",
-      "[180]\tvalid_0's auc: 0.678623\n",
-      "[185]\tvalid_0's auc: 0.678694\n",
-      "[190]\tvalid_0's auc: 0.678788\n",
-      "[195]\tvalid_0's auc: 0.678848\n",
-      "[200]\tvalid_0's auc: 0.678906\n",
-      "CPU times: user 7min 39s, sys: 17.9 s, total: 7min 57s\n",
-      "Wall time: 1min 55s\n"
+      "[5]\tvalid_0's auc: 0.733582\n",
+      "[10]\tvalid_0's auc: 0.754171\n",
+      "[15]\tvalid_0's auc: 0.765937\n",
+      "[20]\tvalid_0's auc: 0.775399\n",
+      "[25]\tvalid_0's auc: 0.781942\n",
+      "[30]\tvalid_0's auc: 0.786226\n",
+      "[35]\tvalid_0's auc: 0.788536\n",
+      "[40]\tvalid_0's auc: 0.791377\n",
+      "[45]\tvalid_0's auc: 0.793547\n",
+      "[50]\tvalid_0's auc: 0.795063\n",
+      "[55]\tvalid_0's auc: 0.796281\n",
+      "[60]\tvalid_0's auc: 0.797781\n",
+      "[65]\tvalid_0's auc: 0.798687\n",
+      "[70]\tvalid_0's auc: 0.799335\n",
+      "[75]\tvalid_0's auc: 0.800403\n",
+      "[80]\tvalid_0's auc: 0.801147\n",
+      "[85]\tvalid_0's auc: 0.802111\n",
+      "[90]\tvalid_0's auc: 0.802698\n",
+      "[95]\tvalid_0's auc: 0.803135\n",
+      "[100]\tvalid_0's auc: 0.803628\n",
+      "[105]\tvalid_0's auc: 0.80421\n",
+      "[110]\tvalid_0's auc: 0.804815\n",
+      "[115]\tvalid_0's auc: 0.805338\n",
+      "[120]\tvalid_0's auc: 0.805675\n",
+      "[125]\tvalid_0's auc: 0.806338\n",
+      "[130]\tvalid_0's auc: 0.806841\n",
+      "[135]\tvalid_0's auc: 0.807112\n",
+      "[140]\tvalid_0's auc: 0.807351\n",
+      "[145]\tvalid_0's auc: 0.807544\n",
+      "[150]\tvalid_0's auc: 0.807898\n",
+      "[155]\tvalid_0's auc: 0.808131\n",
+      "[160]\tvalid_0's auc: 0.80856\n",
+      "[165]\tvalid_0's auc: 0.808981\n",
+      "[170]\tvalid_0's auc: 0.809482\n",
+      "[175]\tvalid_0's auc: 0.809796\n",
+      "[180]\tvalid_0's auc: 0.810036\n",
+      "[185]\tvalid_0's auc: 0.810273\n",
+      "[190]\tvalid_0's auc: 0.810616\n",
+      "[195]\tvalid_0's auc: 0.810822\n",
+      "[200]\tvalid_0's auc: 0.811262\n",
+      "[205]\tvalid_0's auc: 0.811519\n",
+      "[210]\tvalid_0's auc: 0.811726\n",
+      "[215]\tvalid_0's auc: 0.811891\n",
+      "[220]\tvalid_0's auc: 0.812145\n",
+      "[225]\tvalid_0's auc: 0.812302\n",
+      "[230]\tvalid_0's auc: 0.812414\n",
+      "[235]\tvalid_0's auc: 0.812555\n",
+      "[240]\tvalid_0's auc: 0.812811\n",
+      "[245]\tvalid_0's auc: 0.813205\n",
+      "[250]\tvalid_0's auc: 0.813375\n",
+      "[255]\tvalid_0's auc: 0.813448\n",
+      "[260]\tvalid_0's auc: 0.813604\n",
+      "[265]\tvalid_0's auc: 0.813824\n",
+      "[270]\tvalid_0's auc: 0.81402\n",
+      "[275]\tvalid_0's auc: 0.814224\n",
+      "[280]\tvalid_0's auc: 0.814425\n",
+      "[285]\tvalid_0's auc: 0.814497\n",
+      "[290]\tvalid_0's auc: 0.814629\n",
+      "[295]\tvalid_0's auc: 0.814758\n",
+      "[300]\tvalid_0's auc: 0.814887\n",
+      "CPU times: user 22min 28s, sys: 39.2 s, total: 23min 8s\n",
+      "Wall time: 5min 11s\n"
      ]
     }
    ],
    "source": [
     "params = {\n",
     "        'objective': 'binary',\n",
-    "        'metric': 'binary_logloss',\n",
     "        'boosting': 'gbdt',\n",
-    "        'learning_rate': 0.3 ,\n",
-    "        'verbose': 0,\n",
+    "        'learning_rate': 0.2 ,\n",
+    "        'verbose': 5,\n",
     "        'num_leaves': 108,\n",
     "        'bagging_fraction': 0.95,\n",
     "        'bagging_freq': 1,\n",
@@ -402,12 +427,11 @@
     "        'feature_fraction': 0.9,\n",
     "        'feature_fraction_seed': 1,\n",
     "        'max_bin': 256,\n",
-    "        'max_depth': 10,\n",
-    "        'num_rounds': 200,\n",
+    "        'num_rounds': 300,\n",
     "        'metric' : 'auc'\n",
     "    }\n",
     "\n",
-    "%time model_f1 = lgb.train(params, train_set=d_train_final,  valid_sets=watchlist_final, verbose_eval=5)"
+    "%time model_f1 = lgb.train(params, train_set = lgb_train, valid_sets = lgb_val, verbose_eval=5)"
    ]
   },
   {
@@ -419,58 +443,77 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[5]\tvalid_0's auc: 0.653114\n",
-      "[10]\tvalid_0's auc: 0.657574\n",
-      "[15]\tvalid_0's auc: 0.66144\n",
-      "[20]\tvalid_0's auc: 0.664042\n",
-      "[25]\tvalid_0's auc: 0.665703\n",
-      "[30]\tvalid_0's auc: 0.666774\n",
-      "[35]\tvalid_0's auc: 0.667773\n",
-      "[40]\tvalid_0's auc: 0.669122\n",
-      "[45]\tvalid_0's auc: 0.669959\n",
-      "[50]\tvalid_0's auc: 0.670366\n",
-      "[55]\tvalid_0's auc: 0.671043\n",
-      "[60]\tvalid_0's auc: 0.671683\n",
-      "[65]\tvalid_0's auc: 0.672232\n",
-      "[70]\tvalid_0's auc: 0.67285\n",
-      "[75]\tvalid_0's auc: 0.672997\n",
-      "[80]\tvalid_0's auc: 0.673515\n",
-      "[85]\tvalid_0's auc: 0.673327\n",
-      "[90]\tvalid_0's auc: 0.673535\n",
-      "[95]\tvalid_0's auc: 0.673701\n",
-      "[100]\tvalid_0's auc: 0.673904\n",
-      "[105]\tvalid_0's auc: 0.67395\n",
-      "[110]\tvalid_0's auc: 0.673987\n",
-      "[115]\tvalid_0's auc: 0.675365\n",
-      "[120]\tvalid_0's auc: 0.675752\n",
-      "[125]\tvalid_0's auc: 0.675624\n",
-      "[130]\tvalid_0's auc: 0.675811\n",
-      "[135]\tvalid_0's auc: 0.676278\n",
-      "[140]\tvalid_0's auc: 0.676506\n",
-      "[145]\tvalid_0's auc: 0.676711\n",
-      "[150]\tvalid_0's auc: 0.676791\n",
-      "[155]\tvalid_0's auc: 0.676818\n",
-      "[160]\tvalid_0's auc: 0.676617\n",
-      "[165]\tvalid_0's auc: 0.677086\n",
-      "[170]\tvalid_0's auc: 0.677591\n",
-      "[175]\tvalid_0's auc: 0.677871\n",
-      "[180]\tvalid_0's auc: 0.677892\n",
-      "[185]\tvalid_0's auc: 0.678146\n",
-      "[190]\tvalid_0's auc: 0.678279\n",
-      "[195]\tvalid_0's auc: 0.678626\n",
-      "[200]\tvalid_0's auc: 0.678633\n",
-      "CPU times: user 38min 24s, sys: 22 s, total: 38min 46s\n",
-      "Wall time: 6min 35s\n"
+      "[5]\tvalid_0's auc: 0.733582\n",
+      "[10]\tvalid_0's auc: 0.750085\n",
+      "[15]\tvalid_0's auc: 0.75811\n",
+      "[20]\tvalid_0's auc: 0.770784\n",
+      "[25]\tvalid_0's auc: 0.777588\n",
+      "[30]\tvalid_0's auc: 0.782244\n",
+      "[35]\tvalid_0's auc: 0.784892\n",
+      "[40]\tvalid_0's auc: 0.788232\n",
+      "[45]\tvalid_0's auc: 0.789646\n",
+      "[50]\tvalid_0's auc: 0.790231\n",
+      "[55]\tvalid_0's auc: 0.792639\n",
+      "[60]\tvalid_0's auc: 0.79395\n",
+      "[65]\tvalid_0's auc: 0.794468\n",
+      "[70]\tvalid_0's auc: 0.79461\n",
+      "[75]\tvalid_0's auc: 0.795683\n",
+      "[80]\tvalid_0's auc: 0.796032\n",
+      "[85]\tvalid_0's auc: 0.795917\n",
+      "[90]\tvalid_0's auc: 0.796199\n",
+      "[95]\tvalid_0's auc: 0.796593\n",
+      "[100]\tvalid_0's auc: 0.797311\n",
+      "[105]\tvalid_0's auc: 0.797618\n",
+      "[110]\tvalid_0's auc: 0.797168\n",
+      "[115]\tvalid_0's auc: 0.798135\n",
+      "[120]\tvalid_0's auc: 0.798354\n",
+      "[125]\tvalid_0's auc: 0.79868\n",
+      "[130]\tvalid_0's auc: 0.799513\n",
+      "[135]\tvalid_0's auc: 0.80027\n",
+      "[140]\tvalid_0's auc: 0.800792\n",
+      "[145]\tvalid_0's auc: 0.800662\n",
+      "[150]\tvalid_0's auc: 0.80118\n",
+      "[155]\tvalid_0's auc: 0.80135\n",
+      "[160]\tvalid_0's auc: 0.800938\n",
+      "[165]\tvalid_0's auc: 0.801419\n",
+      "[170]\tvalid_0's auc: 0.802965\n",
+      "[175]\tvalid_0's auc: 0.803862\n",
+      "[180]\tvalid_0's auc: 0.803894\n",
+      "[185]\tvalid_0's auc: 0.804506\n",
+      "[190]\tvalid_0's auc: 0.804963\n",
+      "[195]\tvalid_0's auc: 0.805517\n",
+      "[200]\tvalid_0's auc: 0.805784\n",
+      "[205]\tvalid_0's auc: 0.805798\n",
+      "[210]\tvalid_0's auc: 0.806057\n",
+      "[215]\tvalid_0's auc: 0.80646\n",
+      "[220]\tvalid_0's auc: 0.806831\n",
+      "[225]\tvalid_0's auc: 0.806856\n",
+      "[230]\tvalid_0's auc: 0.806874\n",
+      "[235]\tvalid_0's auc: 0.807086\n",
+      "[240]\tvalid_0's auc: 0.807806\n",
+      "[245]\tvalid_0's auc: 0.807897\n",
+      "[250]\tvalid_0's auc: 0.808419\n",
+      "[255]\tvalid_0's auc: 0.808564\n",
+      "[260]\tvalid_0's auc: 0.808912\n",
+      "[265]\tvalid_0's auc: 0.809174\n",
+      "[270]\tvalid_0's auc: 0.809358\n",
+      "[275]\tvalid_0's auc: 0.809608\n",
+      "[280]\tvalid_0's auc: 0.80975\n",
+      "[285]\tvalid_0's auc: 0.810063\n",
+      "[290]\tvalid_0's auc: 0.810292\n",
+      "[295]\tvalid_0's auc: 0.810374\n",
+      "[300]\tvalid_0's auc: 0.810514\n",
+      "CPU times: user 4h 1s, sys: 1min, total: 4h 1min 2s\n",
+      "Wall time: 35min 43s\n"
      ]
     }
    ],
    "source": [
     "params = {\n",
     "        'objective': 'binary',\n",
-    "        'metric': 'binary_logloss',\n",
     "        'boosting': 'dart',\n",
-    "        'learning_rate': 0.3 ,\n",
-    "        'verbose': 0,\n",
+    "        'learning_rate': 0.2 ,\n",
+    "        'verbose': 5,\n",
     "        'num_leaves': 108,\n",
     "        'bagging_fraction': 0.95,\n",
     "        'bagging_freq': 1,\n",
@@ -478,12 +521,11 @@
     "        'feature_fraction': 0.9,\n",
     "        'feature_fraction_seed': 1,\n",
     "        'max_bin': 256,\n",
-    "        'max_depth': 10,\n",
-    "        'num_rounds': 200,\n",
+    "        'num_rounds': 300,\n",
     "        'metric' : 'auc'\n",
     "    }\n",
     "\n",
-    "%time model_f2 = lgb.train(params, train_set=d_train_final,  valid_sets=watchlist_final, verbose_eval=5)"
+    "%time model_f2 = lgb.train(params, train_set=lgb_train,  valid_sets=lgb_val, verbose_eval=5)"
    ]
   },
   {
@@ -519,13 +561,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saving predictions Model model of gbdt\n",
+      "Saving predictions Model\n",
       "Done!\n"
      ]
     }
    ],
    "source": [
-    "print ('Saving predictions Model model of gbdt')\n",
+    "print ('Saving predictions Model')\n",
     "\n",
     "subm = pd.DataFrame()\n",
     "subm['id'] = ids\n",
@@ -564,7 +606,7 @@
   },
   "toc": {
    "nav_menu": {
-    "height": "84px",
+    "height": "102px",
     "width": "252px"
    },
    "navigate_menu": true,
