--- a/notebooks/Untitled.ipynb
+++ b/notebooks/Untitled.ipynb
@@ -436,100 +436,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[5]\tvalid_0's auc: 0.733582\n",
-      "[10]\tvalid_0's auc: 0.750085\n",
-      "[15]\tvalid_0's auc: 0.75811\n",
-      "[20]\tvalid_0's auc: 0.770784\n",
-      "[25]\tvalid_0's auc: 0.777588\n",
-      "[30]\tvalid_0's auc: 0.782244\n",
-      "[35]\tvalid_0's auc: 0.784892\n",
-      "[40]\tvalid_0's auc: 0.788232\n",
-      "[45]\tvalid_0's auc: 0.789646\n",
-      "[50]\tvalid_0's auc: 0.790231\n",
-      "[55]\tvalid_0's auc: 0.792639\n",
-      "[60]\tvalid_0's auc: 0.79395\n",
-      "[65]\tvalid_0's auc: 0.794468\n",
-      "[70]\tvalid_0's auc: 0.79461\n",
-      "[75]\tvalid_0's auc: 0.795683\n",
-      "[80]\tvalid_0's auc: 0.796032\n",
-      "[85]\tvalid_0's auc: 0.795917\n",
-      "[90]\tvalid_0's auc: 0.796199\n",
-      "[95]\tvalid_0's auc: 0.796593\n",
-      "[100]\tvalid_0's auc: 0.797311\n",
-      "[105]\tvalid_0's auc: 0.797618\n",
-      "[110]\tvalid_0's auc: 0.797168\n",
-      "[115]\tvalid_0's auc: 0.798135\n",
-      "[120]\tvalid_0's auc: 0.798354\n",
-      "[125]\tvalid_0's auc: 0.79868\n",
-      "[130]\tvalid_0's auc: 0.799513\n",
-      "[135]\tvalid_0's auc: 0.80027\n",
-      "[140]\tvalid_0's auc: 0.800792\n",
-      "[145]\tvalid_0's auc: 0.800662\n",
-      "[150]\tvalid_0's auc: 0.80118\n",
-      "[155]\tvalid_0's auc: 0.80135\n",
-      "[160]\tvalid_0's auc: 0.800938\n",
-      "[165]\tvalid_0's auc: 0.801419\n",
-      "[170]\tvalid_0's auc: 0.802965\n",
-      "[175]\tvalid_0's auc: 0.803862\n",
-      "[180]\tvalid_0's auc: 0.803894\n",
-      "[185]\tvalid_0's auc: 0.804506\n",
-      "[190]\tvalid_0's auc: 0.804963\n",
-      "[195]\tvalid_0's auc: 0.805517\n",
-      "[200]\tvalid_0's auc: 0.805784\n",
-      "[205]\tvalid_0's auc: 0.805798\n",
-      "[210]\tvalid_0's auc: 0.806057\n",
-      "[215]\tvalid_0's auc: 0.80646\n",
-      "[220]\tvalid_0's auc: 0.806831\n",
-      "[225]\tvalid_0's auc: 0.806856\n",
-      "[230]\tvalid_0's auc: 0.806874\n",
-      "[235]\tvalid_0's auc: 0.807086\n",
-      "[240]\tvalid_0's auc: 0.807806\n",
-      "[245]\tvalid_0's auc: 0.807897\n",
-      "[250]\tvalid_0's auc: 0.808419\n",
-      "[255]\tvalid_0's auc: 0.808564\n",
-      "[260]\tvalid_0's auc: 0.808912\n",
-      "[265]\tvalid_0's auc: 0.809174\n",
-      "[270]\tvalid_0's auc: 0.809358\n",
-      "[275]\tvalid_0's auc: 0.809608\n",
-      "[280]\tvalid_0's auc: 0.80975\n",
-      "[285]\tvalid_0's auc: 0.810063\n",
-      "[290]\tvalid_0's auc: 0.810292\n",
-      "[295]\tvalid_0's auc: 0.810374\n",
-      "[300]\tvalid_0's auc: 0.810514\n",
-      "CPU times: user 4h 1s, sys: 1min, total: 4h 1min 2s\n",
-      "Wall time: 35min 43s\n"
-     ]
-    }
-   ],
-   "source": [
-    "params = {\n",
-    "        'objective': 'binary',\n",
-    "        'boosting': 'dart',\n",
-    "        'learning_rate': 0.2 ,\n",
-    "        'verbose': 5,\n",
-    "        'num_leaves': 108,\n",
-    "        'bagging_fraction': 0.95,\n",
-    "        'bagging_freq': 1,\n",
-    "        'bagging_seed': 1,\n",
-    "        'feature_fraction': 0.9,\n",
-    "        'feature_fraction_seed': 1,\n",
-    "        'max_bin': 256,\n",
-    "        'num_rounds': 300,\n",
-    "        'metric' : 'auc'\n",
-    "    }\n",
-    "\n",
-    "%time model_f2 = lgb.train(params, train_set=lgb_train,  valid_sets=lgb_val, verbose_eval=5)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
    "outputs": [
@@ -545,8 +451,8 @@
    "source": [
     "print('Making predictions')\n",
     "p_test_1 = model_f1.predict(X_test)\n",
-    "p_test_2 = model_f2.predict(X_test)\n",
-    "p_test_avg = np.mean([p_test_1, p_test_2], axis = 0)\n",
+    "# p_test_2 = model_f2.predict(X_test)\n",
+    "# p_test_avg = np.mean([p_test_1, p_test_2], axis = 0)\n",
     "\n",
     "\n",
     "print('Done making predictions')"
@@ -554,15 +460,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saving predictions Model\n",
-      "Done!\n"
+      "Saving predictions Model\n"
      ]
     }
    ],
@@ -571,7 +476,7 @@
     "\n",
     "subm = pd.DataFrame()\n",
     "subm['id'] = ids\n",
-    "subm['target'] = p_test_avg\n",
+    "subm['target'] = p_test_1\n",
     "subm.to_csv(data_path + 'submission_lgbm_avg.csv.gz', compression = 'gzip', index=False, float_format = '%.5f')\n",
     "\n",
     "print('Done!')"
